added search functionality to front end with song and playlist results which can be added to playlists / followed added unfollow functionality added remove songs from playlists functionality